--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@
   --white-color: hsl(228, 8%, 98%);
   --black-color: hsl(228, 6%, 4%);
   --body-color: hsl(228, 6%, 8%);
+  --gray-color: hsla(231, 31%, 20%, 0.2);
   --container-color: hsl(228, 6%, 12%);
   --shadow-img: 0 0 48px hsla(93, 54%, 54%, .4);
   --gradient-card: linear-gradient(180deg,
@@ -86,8 +87,10 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
+  max-width: 1125px;
   margin-inline: 1.5rem;
+  margin: 0 auto;
+  padding: 0 25px;
 }
 
 .grid {
@@ -111,8 +114,62 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: var(--z-fixed);
+}
+
+.nav {
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 5rem;
+  font-size: 1.1rem;
+  font-weight: var(--font-semi-bold);
+}
+.nav__link {
+  color: var(--white-color);
+  transition: color 0.4s;
+}
+.nav__link:hover {
+  color: var(--first-color);
+}
+.nav__logo, .nav__close, .nav__toggle, .nav__actions {
+  display: flex;
+  color: var(--title-color);
+  cursor: pointer;
+}
+.nav__logo {
+  font-weight: var(--font-semi-bold);
+  column-gap: 0.25rem;
+  align-items: center;
+}
+.nav__logo i {
+  color: var(--first-color);
+  font-size: 1.25rem;
+  font-weight: initial;
+}
+.nav__actions {
+  font-size: 1.25rem;
+  column-gap: 1rem;
+  align-items: center;
+}
+.nav__close, .nav__toggle {
+  display: none;
+}
+
 /* Navigation for mobile devices */
-/* Show menu */
 /* Add blur header */
 /* Active link */
 /*=============== HOME ===============*/
