--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -14,6 +14,7 @@
   --white-color: hsl(228, 8%, 98%);
   --black-color: hsl(228, 6%, 4%);
   --body-color: hsl(228, 6%, 8%);
+  --gray-color: hsla(231, 31%, 20%, 0.2);
   --container-color: hsl(228, 6%, 12%);
   --shadow-img: 0 0 48px hsla(93, 54%, 54%, .4);
   --gradient-card: linear-gradient(180deg,
@@ -91,8 +92,10 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
+  max-width: 1125px;
   margin-inline: 1.5rem;
+  margin: 0 auto;
+  padding: 0 25px;
 }
 
 .grid {
@@ -116,12 +119,67 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: var(--z-fixed);
+}
+
+.nav {
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 5rem;
+    font-size: 1.1rem;
+    font-weight: var(--font-semi-bold);
+  }
+  &__link {
+    color: var(--white-color);
+    transition: color .4s;
+    &:hover {
+      color: var(--first-color);
+    }
+  }
+
+  &__logo, &__close, &__toggle, &__actions {
+    display: flex;
+    color: var(--title-color);
+    cursor: pointer;
+  }
+
+  &__logo {
+    font-weight: var(--font-semi-bold);
+    column-gap: .25rem;
+    align-items: center;
+  }
+  &__logo i {
+    color: var(--first-color);
+    font-size: 1.25rem;
+    font-weight: initial;
+  }
+  &__actions {
+    font-size: 1.25rem;
+    column-gap: 1rem;
+    align-items: center;
+  }
+  &__close, &__toggle {
+    display: none;
+  }
+}
 
 
 /* Navigation for mobile devices */
 
-
-/* Show menu */
 
 
 /* Add blur header */
