header & nav media queries

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,6 +170,48 @@ img {
 }
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px) {
+  .nav__menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background-color: var(--gray-color);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    width: 80%;
+    height: 100%;
+    padding: 6rem 3rem 0;
+    transition: right 0.4s;
+  }
+  .nav__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+  }
+  .nav__link {
+    color: var(--title-color);
+    font-size: 2rem;
+    font-weight: var(--font-semi-bold);
+    transition: color 0.4s;
+  }
+  .nav__link:hover {
+    color: var(--first-color);
+  }
+  .nav__close, .nav__toggle {
+    display: flex;
+  }
+  .nav__close {
+    position: absolute;
+    top: 1.15rem;
+    right: 1.15rem;
+    font-size: 1.5rem;
+  }
+}
+/* Show menu */
+.show-menu {
+  right: 0;
+}
+
 /* Add blur header */
 /* Active link */
 /*=============== HOME ===============*/
