--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -179,7 +179,54 @@ img {
 
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px) {
+  .nav {
+    &__menu {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      background-color: var(--gray-color);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      width: 80%;
+      height: 100%;
+      padding: 6rem 3rem 0;
+      transition: right .4s;
+    }
 
+    &__list {
+      display: flex;
+      flex-direction: column;
+      row-gap: 3rem;
+    }
+
+    &__link {
+      color: var(--title-color);
+      font-size: 2rem;
+      font-weight: var(--font-semi-bold);
+      transition: color .4s;
+      &:hover {
+        color: var(--first-color)
+      }
+    }
+
+    &__close, &__toggle {
+      display: flex;
+    }
+
+    &__close {
+      position: absolute;
+      top: 1.15rem;
+      right: 1.15rem;
+      font-size: 1.5rem;
+    }
+  }
+}
+
+/* Show menu */
+.show-menu {
+  right: 0;
+}
 
 
 /* Add blur header */
