--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,6 +215,38 @@ img {
 /* Add blur header */
 /* Active link */
 /*=============== HOME ===============*/
+.home__container {
+  padding-top: 2.5rem;
+  row-gap: 2rem;
+}
+.home__img {
+  width: 270px;
+  filter: drop-shadow(var(--shadow-img));
+  justify-self: center;
+}
+.home__data {
+  text-align: center;
+}
+.home__title {
+  text-transform: uppercase;
+  font-size: var(--biggest-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 1rem;
+}
+.home__title span {
+  color: var(--first-color);
+}
+.home__descr {
+  margin-bottom: 3rem;
+}
+.home__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+  text-transform: uppercase;
+}
+
 /*=============== BUTTON ===============*/
 /*=============== NEWS ===============*/
 /*=============== SHOP ===============*/
