--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -236,7 +236,42 @@ img {
 
 
 /*=============== HOME ===============*/
+.home {
+  &__container {
+    padding-top: 2.5rem;
+    row-gap: 2rem;
+  }
 
+  &__img {
+    width: 270px;
+    filter: drop-shadow(var(--shadow-img));
+    justify-self: center;
+  }
+
+  &__data {
+    text-align: center;
+  }
+  &__title {
+    text-transform: uppercase;
+    font-size: var(--biggest-font-size);
+    font-weight: var(--font-bold);
+    margin-bottom: 1rem;
+    span {
+      color: var(--first-color);
+    }
+  }
+  &__descr {
+    margin-bottom: 3rem;
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+    text-transform: uppercase;
+  }
+}
 
 /*=============== BUTTON ===============*/
 
