--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -274,7 +274,41 @@ img {
 }
 
 /*=============== BUTTON ===============*/
+.button {
+  background-color: var(--white-color);
+  color: var(--black-color);
+  font-weight: var(--font-bold);
+  padding: .5rem 1.5rem .5rem .5rem;
+  border-radius: 4rem;
+  display: inline-flex;
+  align-items: center;
+  column-gap: .75rem;
 
+  &:hover span {
+    transform: translateX(.15rem) rotate(-30deg)
+  }
+
+  span {
+    background-color: var(--first-color);
+    padding: .5rem;
+    font-size: 1.25rem;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: transform .4s;
+  }
+
+  &__link {
+    color: var(--white-color);
+    font-weight: var(--font-bold);
+    text-decoration: underline;
+    transition: color .4s;
+    
+    &:hover {
+      color: var(--first-color);
+    }
+  }
+}
 
 /*=============== NEWS ===============*/
 
