--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,6 +101,9 @@ img {
 .section {
   padding-block: 5rem 1rem;
 }
+.section__title {
+  text-transform: uppercase;
+}
 
 .section__title {
   font-size: var(--h1-font-size);
@@ -281,6 +284,48 @@ img {
 }
 
 /*=============== NEWS ===============*/
+.new__data {
+  text-align: center;
+}
+.new__container {
+  row-gap: 7.5rem;
+}
+.new__content {
+  row-gap: 6rem;
+}
+.new__card {
+  position: relative;
+  width: 200px;
+  background: var(--gradient-card);
+  padding: 9rem 0.75rem 1.5rem 0.75rem;
+  border: 2px solid var(--first-color-light);
+  border-radius: 1.5rem;
+}
+.new__card:nth-child(odd) {
+  transform: rotate(-5deg);
+}
+.new__card:nth-child(even) {
+  justify-self: flex-end;
+  transform: rotate(5deg);
+}
+.new__card:hover .new__img {
+  transform: translateY(-0.5rem);
+  filter: drop-shadow(var(--shadow-img));
+}
+.new__img {
+  position: absolute;
+  top: -4.5rem;
+  left: 0;
+  right: 0;
+  width: 180px;
+  margin: 0 auto;
+  transition: transform 0.4s, filter 1s ease-out;
+}
+.new__title {
+  font-size: var(--h2-font-size);
+  text-align: center;
+}
+
 /*=============== SHOP ===============*/
 /*=============== CARE ===============*/
 /*=============== CONTACT ===============*/
