--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -216,6 +216,19 @@ img {
 }
 
 /* Add blur header */
+.blur-header::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--gray-color);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 /* Active link */
 /*=============== HOME ===============*/
 .home__container {
