--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -379,6 +379,66 @@ img {
 }
 
 /*=============== SHOP ===============*/
+.shop {
+  &__container {
+    padding-top: 6.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 6rem 1.5rem;
+  }
+
+  &__card {
+    position: relative;
+    background: var(--gradient-card);
+    padding: 5.75rem .75rem 1.25rem .75rem;
+    border-radius: 1rem;
+    transition: transform .8s, box-shadow 1.5s ease-out;
+
+    &:hover{
+      transform: translateY(-.25rem);
+      box-shadow: inset 0px -5px 10px var(--first-color-alt);
+    }
+
+    &:hover .shop__img {
+      transform: translateY(-.5rem);
+      filter: drop-shadow(var(--shadow-img));
+    }
+  }
+
+  &__img {
+    position: absolute;
+    top: -4.5rem;
+    left: 0;
+    right: 0;
+    width: 130px;
+    margin: 0 auto;
+    transition: transform .4s, filter 1s ease-out;
+  }
+
+  &__title {
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: .5rem;
+  }
+
+  &__price {
+    color: var(--title-color);
+    font-weight: var(--font-semi-bold);
+  }
+
+  &__btn {
+    position: absolute;
+    right: 0.75rem;
+    bottom: 0.75rem;
+    outline: none;
+    border: none;
+    background-color: var(--white-color);
+    padding: 6px;
+    border-radius: 50%;
+    font-size: 1.25rem;
+    display: grid;
+    cursor: pointer;
+  }
+}
 
 
 /*=============== CARE ===============*/
