--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -442,6 +442,34 @@ img {
 
 
 /*=============== CARE ===============*/
+.care {
+  &__container {
+    padding-top: 2rem;
+    row-gap: 2rem;
+  }
+
+  &__img {
+    width: 270px;
+    filter: drop-shadow(--shadow-img);
+    justify-self: center;
+  }
+
+  &__list {
+    display: grid;
+    row-gap: 1rem;
+  }
+
+  &__item {
+    display: flex;
+    column-gap: .5rem;
+    align-items: flex-start;
+
+    i {
+      font-size: 1.5rem;
+      color: var(--first-color);
+    }
+  }
+}
 
 
 /*=============== CONTACT ===============*/
