--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -417,6 +417,38 @@ img {
 }
 
 /*=============== CONTACT ===============*/
+.contact__container {
+  padding-top: 2rem;
+  row-gap: 2rem;
+}
+.contact__img {
+  width: 270px;
+  filter: drop-shadow(--shadow-img);
+  justify-self: center;
+}
+.contact__content {
+  display: grid;
+  row-gap: 2rem;
+  text-align: center;
+}
+.contact__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.5rem;
+}
+.contact__social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2rem;
+}
+.contact__social a {
+  color: var(--first-color);
+  font-size: 1.5rem;
+}
+.contact__info {
+  font-style: normal;
+}
+
 /*=============== FOOTER ===============*/
 /*=============== SCROLL BAR ===============*/
 /*=============== SCROLL UP ===============*/
