--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -450,6 +450,80 @@ img {
 }
 
 /*=============== FOOTER ===============*/
+.footer {
+  padding-block: 4rem 2rem;
+  background-color: var(--gray-color);
+  box-shadow: inset 0px 50px 30px var(--body-color);
+}
+.footer__container {
+  row-gap: 3rem;
+  padding: 1rem;
+}
+.footer__logo {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.75rem;
+  color: var(--title-color);
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: 1.15rem;
+  margin-left: 1.5rem;
+}
+.footer__logo i {
+  color: var(--first-color);
+  font-size: 1.5rem;
+  font-weight: initial;
+}
+.footer__descr {
+  text-align: center;
+  line-height: 1.5rem;
+}
+.footer__content {
+  grid-template-columns: repeat(2, max-content);
+  gap: 4rem;
+  margin: 0 auto;
+  text-align: center;
+}
+.footer__content > div:last-child {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.footer__title {
+  font-size: var(--normal-font-size);
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.footer__links {
+  display: grid;
+  row-gap: 0.5rem;
+}
+.footer__link {
+  color: var(--text-color);
+  transition: color 0.5s;
+}
+.footer__social {
+  display: flex;
+  column-gap: 1.5rem;
+  justify-content: center;
+}
+.footer__social-link {
+  color: var(--text-color);
+  font-size: 1.5rem;
+  transition: color 0.5s;
+}
+.footer__link:hover, .footer__social-link:hover {
+  color: var(--first-color);
+}
+.footer__copy {
+  text-align: center;
+  display: block;
+  margin-top: 2.5rem;
+  font-size: var(--small-font-size);
+  opacity: 0.5;
+  filter: blur(0.5px);
+  -webkit-filter: blur(0.5px);
+}
+
 /*=============== SCROLL BAR ===============*/
 /*=============== SCROLL UP ===============*/
 /* Show Scroll Up */
