--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,6 +529,19 @@ img {
 }
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: var(--gray-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #20263c;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #262a4a;
+}
+
 /*=============== SCROLL UP ===============*/
 /* Show Scroll Up */
 /*=============== BREAKPOINTS ===============*/
