--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -626,10 +626,32 @@ img {
 }
 
 /*=============== SCROLL UP ===============*/
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  opacity: .35;
+  background-color: var(--container-color);
+  color: var(--title-color);
+  box-shadow: inset 0 0 5px .1px var(--first-color),
+  0 0 15px 10px hsla(228, 48%, 4%, .5);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  border-radius: 12px;
+  z-index: var(--z-tooltip);
+  transition: bottom .7s, transform .5s;
 
+  &:hover {
+    transform: translateY(-.5rem);
+  }
+}
 
 /* Show Scroll Up */
-
+.show-scroll {
+  bottom: 3rem;
+  opacity: 1;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
