styles breakpoints for small devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -574,5 +574,33 @@ img {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 320px) {
+  .container {
+    margin-inline: 1rem;
+  }
+
+  .home__title {
+    font-size: 2rem;
+  }
+  .home__buttons {
+    flex-direction: column;
+    row-gap: 1.5rem;
+  }
+
+  .shop__container {
+    grid-template-columns: 160px;
+    justify-content: center;
+  }
+
+  .footer__content {
+    grid-template-columns: max-content;
+  }
+  .footer__container > div {
+    text-align: center;
+  }
+  .footer__container > div a {
+    margin-left: 0;
+  }
+}
 /* For medium devices */
 /* For large devices */
