--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,7 +137,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 5rem;
+  column-gap: 4.5rem;
   font-size: 1.1rem;
   font-weight: var(--font-semi-bold);
 }
@@ -622,6 +622,10 @@ img {
     grid-column-start: 3;
     grid-column-end: 4;
   }
+
+  .scrollup {
+    font-size: 1.5rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .nav__menu {
@@ -661,5 +665,159 @@ img {
     justify-content: space-between;
     margin: 0 1rem;
   }
+
+  .scrollup {
+    font-size: 2rem;
+  }
 }
 /* For large devices */
+@media screen and (min-width: 1150px) {
+  .container {
+    margin-inline: auto;
+  }
+
+  .section {
+    padding-block: 7rem 2rem;
+  }
+  .section__title {
+    margin-bottom: 1.5rem;
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 2rem);
+  }
+  .nav__logo i {
+    font-size: 1.5rem;
+  }
+  .nav__menu {
+    width: initial;
+  }
+
+  .home__container {
+    grid-template-columns: 480px 535px;
+    align-items: center;
+    column-gap: 4rem;
+    padding-top: 4rem;
+  }
+  .home__img {
+    width: 480px;
+  }
+  .home__data {
+    text-align: initial;
+  }
+  .home__descr {
+    margin-bottom: 4.5rem;
+  }
+  .home__buttons {
+    justify-content: initial;
+    column-gap: 2rem;
+  }
+
+  .new__container {
+    grid-template-columns: 412px 490px;
+    align-items: center;
+    column-gap: 8.5rem;
+  }
+  .new__data, .new__data .section__title {
+    text-align: initial;
+  }
+  .new__content {
+    row-gap: 11rem;
+  }
+  .new__title {
+    font-size: var(--h3-font-size);
+  }
+
+  .shop__container {
+    grid-template-columns: repeat(3, 240px);
+    gap: 9rem 5rem;
+  }
+  .shop__card {
+    padding: 11rem 1.5rem 2rem;
+    border-radius: 2rem;
+  }
+  .shop__img {
+    width: 210px;
+    top: -5.5rem;
+  }
+  .shop__title {
+    font-size: var(--h3-font-size);
+  }
+  .shop__price {
+    font-size: var(--h2-font-size);
+  }
+  .shop__btn {
+    right: 1.5rem;
+    bottom: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .care__container {
+    grid-template-columns: 480px 385px;
+    align-items: center;
+    column-gap: 8rem;
+    padding-top: 3rem;
+  }
+  .care__img {
+    width: 480px;
+  }
+  .care__list {
+    row-gap: 2rem;
+  }
+
+  .contact__container {
+    grid-template-columns: 280px 480px;
+    justify-content: center;
+    align-items: center;
+    column-gap: 8rem;
+    padding-block: 3rem;
+  }
+  .contact__content {
+    grid-template-columns: 1fr;
+    order: -1;
+    text-align: initial;
+    row-gap: 4rem;
+  }
+  .contact__content > div:first-child {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .contact__social {
+    justify-content: initial;
+    column-gap: 1.5rem;
+  }
+  .contact__title {
+    margin-bottom: 1rem;
+  }
+  .contact__img {
+    width: 480px;
+  }
+
+  .footer__logo {
+    margin-bottom: 2rem;
+    margin-left: 0;
+  }
+  .footer__logo i {
+    font-size: 2rem;
+  }
+  .footer__descr {
+    text-align: initial;
+  }
+  .footer__content {
+    gap: 8rem;
+  }
+  .footer__title {
+    font-size: var(--h3-font-size);
+    margin-bottom: 1.5rem;
+  }
+  .footer__social {
+    column-gap: 2rem;
+  }
+  .footer__copy {
+    margin-top: 6rem;
+  }
+
+  .scrollup {
+    font-size: 2.5rem;
+  }
+}
