--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -143,7 +143,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    column-gap: 5rem;
+    column-gap: 4.5rem;
     font-size: 1.1rem;
     font-weight: var(--font-semi-bold);
   }
@@ -722,6 +722,10 @@ img {
       }
     }
   }
+
+  .scrollup {
+    font-size: 1.5rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -776,6 +780,173 @@ img {
       margin: 0 1rem;
     }
   }
+
+  .scrollup {
+    font-size: 2rem;
+  }
 }
 
 /* For large devices */
+@media screen and (min-width: 1150px) {
+  .container {
+    margin-inline: auto;
+  }
+
+  .section {
+    padding-block: 7rem 2rem;
+    &__title {
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 2rem);
+    &__logo i {
+      font-size: 1.5rem;
+    }
+    &__menu {
+      width: initial;
+    }
+  }
+  
+  .home {
+    &__container {
+      grid-template-columns: 480px 535px;
+      align-items: center;
+      column-gap: 4rem;
+      padding-top: 4rem;
+    }
+    &__img {
+      width: 480px;
+    }
+    &__data {
+      text-align: initial;
+    }
+    &__descr {
+      margin-bottom: 4.5rem;
+    }
+    &__buttons {
+      justify-content: initial;
+      column-gap: 2rem;
+    }
+  }
+
+  .new {
+    &__container {
+      grid-template-columns: 412px 490px;
+      align-items: center;
+      column-gap: 8.5rem;
+    }
+    &__data, &__data .section__title {
+      text-align: initial;
+    }
+    &__content {
+      row-gap: 11rem;
+    }
+    &__title {
+      font-size: var(--h3-font-size);
+    }
+  }
+
+  .shop {
+    &__container {
+      grid-template-columns: repeat(3, 240px);
+      gap: 9rem 5rem
+    }
+    &__card {
+      padding: 11rem 1.5rem 2rem;
+      border-radius: 2rem;
+    }
+    &__img {
+      width: 210px;
+      top: -5.5rem;
+    }
+    &__title {
+      font-size: var(--h3-font-size);
+    }
+    &__price {
+      font-size: var(--h2-font-size);
+    }
+    &__btn {
+      right: 1.5rem;
+      bottom: 2rem;
+      font-size: 1.5rem;
+    }
+  }
+
+  .care {
+    &__container {
+      grid-template-columns: 480px 385px;
+      align-items: center;
+      column-gap: 8rem;
+      padding-top: 3rem;
+    }
+    &__img {
+      width: 480px;
+    }
+    &__list {
+      row-gap: 2rem;
+    }
+  }
+
+  .contact {
+    &__container {
+      grid-template-columns: 280px 480px;
+      justify-content: center;
+      align-items: center;
+      column-gap: 8rem;
+      padding-block: 3rem;
+    }
+    &__content {
+      & > div:first-child {
+        grid-column-start: 1;
+        grid-column-end: 2;
+      }
+
+      grid-template-columns: 1fr;
+      order: -1;
+      text-align: initial;
+      row-gap: 4rem;
+    }
+    &__social {
+      justify-content: initial;
+      column-gap: 1.5rem;
+    }
+    &__title {
+      margin-bottom: 1rem;
+    }
+    &__img {
+      width: 480px;
+    }
+  }
+
+  .footer {
+    &__logo {
+      margin-bottom: 2rem;
+      margin-left: 0;
+      i {
+        font-size: 2rem;
+      }
+    }
+    &__descr {
+      text-align: initial;
+    }
+    &__content {
+      gap: 8rem;
+    }
+    &__title {
+      font-size: var(--h3-font-size);
+      margin-bottom: 1.5rem;
+    }
+    &__social {
+      column-gap: 2rem;
+    }
+    &__copy {
+      margin-top: 6rem;
+    }
+  }
+
+  .scrollup {
+    font-size: 2.5rem;
+  }
+}
